--- a/hypermap.html
+++ b/hypermap.html
@@ -88,35 +88,35 @@
 <form>
   <select onChange="setDestinationType(this.options[this.selectedIndex].value)">
 	<option value="not_set">> Elysium Resources</option>
-    <option value="Vault of Enlightenment">Vault of Enlightenment</option>
-	<option value="Smithy">Smithy</option>
-	<option value="Radiant Armory">Radiant Armory</option>
-	<option value="Ward of Respite">Ward of Respite</option>
-	<option value="Euphoria Asylum">Euphoria Asylum</option>
-	<option value="Sacred Columbarium">Sacred Columbarium</option>
-	<option value="Ivory Tower">Ivory Tower</option>
+    <option value="a Vault of Enlightenment">Vault of Enlightenment</option>
+	<option value="a Smithy">Smithy</option>
+	<option value="a Radiant Armory">Radiant Armory</option>
+	<option value="a Ward of Respite">Ward of Respite</option>
+	<option value="an Euphoria Asylum">Euphoria Asylum</option>
+	<option value="a Sacred Columbarium">Sacred Columbarium</option>
+	<option value="an Ivory Tower">Ivory Tower</option>
   </select>
 </form>
 
 <form>
   <select onChange="setDestinationType(this.options[this.selectedIndex].value)">
 	<option value="not_set">> Stygia Resources</option>
-    <option value="Damned Library">Damned Library</option>
-	<option value="Stygian Foundry">Stygian Foundry</option>
-	<option value="Iron Garrison">Iron Garrison</option>
-	<option value="Hall of Reconstruction">Hall of Reconstruction</option>
-	<option value="Dark Sanitarium">Dark Sanitarium</option>
-	<option value="Boneland">Boneland</option>
-	<option value="Ebony Tower">Ebony Tower</option>
+    <option value="a Damned Library">Damned Library</option>
+	<option value="a Stygian Foundry">Stygian Foundry</option>
+	<option value="an Iron Garrison">Iron Garrison</option>
+	<option value="a Hall of Reconstruction">Hall of Reconstruction</option>
+	<option value="a Dark Sanitarium">Dark Sanitarium</option>
+	<option value="a Boneland">Boneland</option>
+	<option value="an Ebony Tower">Ebony Tower</option>
   </select>
 </form>
 
-
+<!--
 <form name="customDestinationForm" method="get" action="" onsubmit="return false">
 <input type="text" id="customText" name="dest">
 <input type="button" onclick="customDestination()" value="> Find">
 </form>
-
+-->
 
 
 </div><br>
