--- a/hypermap.html
+++ b/hypermap.html
@@ -9,8 +9,8 @@
 <style></style>
 <!-- Plane: 0: Valhalla, 1: Elysium, 2: Stygia, 3: Sewers, 4: Warrens, 5: Terra Nullius -->
 </head>
-<body>
-<div class="topbar">
+<body style="cursor:pointer">
+<div class="topbar" style="cursor:pointer">
 <div class="maplink" style="border-color:#FFFF00; background-color:#333300 cursor:pointer" onclick="showPlane(0)"> Laurentia </div> 
 <div class="maplink" style="border-color:#CCCCCC; background-color:#333333 cursor:pointer" onclick="showPlane(3)"> Sewers </div> 
 <div class="maplink" style="border-color:#00FFFF; background-color:#003333 cursor:pointer" onclick="showPlane(1)"> Elysium </div> 
