--- a/test.html
+++ b/test.html
@@ -24,6 +24,7 @@
 <div class="maplink" id="markerModeButton" style="border-color:#FFFFFF; background-color:#000000"> Set/Remove Markers: OFF</div>
 <div class="maplink" id="mobileModeButton" style="border-color:#FFFFFF; background-color:#000000"> Touchscreen Mode: OFF</div>
 <div class="maplink" id="backButton" style="border-color:#FFFFFF; background-color:#000000"><a href="http://www.nexusclash.com/modules.php?name=Game">Back to game</a></div>
+<div class="toptitle"></div>
 </div>
 </body>
 </html>
