--- a/hypermap.html
+++ b/hypermap.html
@@ -10,6 +10,7 @@
 <!-- Plane: 0: Valhalla, 1: Elysium, 2: Stygia, 3: Sewers, 4: Warrens, 5: Terra Nullius -->
 </head>
 <body>
+<meta content="width=device-width, initial-scale=1" name="viewport" />
 <div class="topbar">
 <div class="maplink" style="border-color:#FFFF00; background-color:#333300" onclick="showPlane(0)"> Laurentia </div>
 <div class="maplink" style="border-color:#CCCCCC; background-color:#333333" onclick="showPlane(3)"> Sewers </div>
