--- a/test.html
+++ b/test.html
@@ -27,4 +27,6 @@
 <div class="toptitle"></div>
 </div>
 </body>
+<script type="text/javascript"></script>
+<script language="JavaScript1.2" src="test.js"></script>
 </html>
