--- a/hypermap.html
+++ b/hypermap.html
@@ -5,25 +5,25 @@
 <!-- Original map: https://docs.google.com/spreadsheets/d/1bugKcessSKUjay7HHe2ozWBpA_n8esOrsY1gAeoO8a4/edit?usp=sharing -->
 <html><head><title>Nexus Clash Breath 4 Hypermap</title>
 
-<link rel="STYLESHEET" type="text/css" href="style.css" /> 
+<link rel="STYLESHEET" type="text/css" href="style.css" />
 <style></style>
 <!-- Plane: 0: Valhalla, 1: Elysium, 2: Stygia, 3: Sewers, 4: Warrens, 5: Terra Nullius -->
 </head>
-<body>
+<body style="cursor: pointer;">
 <div class="topbar">
-<div class="maplink" style="border-color:#FFFF00; background-color:#333300" onclick="showPlane(0)"> Laurentia </div> 
-<div class="maplink" style="border-color:#CCCCCC; background-color:#333333" onclick="showPlane(3)"> Sewers </div> 
-<div class="maplink" style="border-color:#00FFFF; background-color:#003333" onclick="showPlane(1)"> Elysium </div> 
+<div class="maplink" style="border-color:#FFFF00; background-color:#333300" onclick="showPlane(0)"> Laurentia </div>
+<div class="maplink" style="border-color:#CCCCCC; background-color:#333333" onclick="showPlane(3)"> Sewers </div>
+<div class="maplink" style="border-color:#00FFFF; background-color:#003333" onclick="showPlane(1)"> Elysium </div>
 <div class="maplink" style="border-color:#FF0000; background-color:#330000" onclick="showPlane(2)"> Stygia </div>
 <div class="maplink" style="border-color:#00FF00; background-color:#003300" onclick="showPlane(4)"> Wyrm's Lair </div>
 <div class="maplink" style="border-color:#d96207; background-color:#213d30" onclick="showPlane(5)"> Terra Nullius </div>
-<div class="maplink" id="districtsButton" style="border-color:#FFFFFF; background-color:#000000" onclick="toggleDistricts()"> Districts: OFF </div> 
+<div class="maplink" id="districtsButton" style="border-color:#FFFFFF; background-color:#000000" onclick="toggleDistricts()"> Districts: OFF </div>
 <!-- <div class="maplink" id="descriptionsButton" style="border-color:#FFFFFF; background-color:#000000" onclick="toggleDescriptions()"> Descriptions: ON </div> -->
-<div class="maplink" id="badgeButton" style="border-color:#FFFFFF; background-color:#000000" onclick="toggleBadges()"> Badges: OFF </div> 
-<div class="maplink" id="guildsButton" style="border-color:#FFFFFF; background-color:#000000" onclick="toggleGuilds()"> Guilds: OFF </div> 
-<div class="maplink" id="markerModeButton" style="border-color:#FFFFFF; background-color:#000000" onclick="toggleMarkerMode()"> Set/Remove Markers: OFF</div> 
-<div class="maplink" id="mobileModeButton" style="border-color:#FFFFFF; background-color:#000000" onclick="toggleTouchscreenMode()"> Touchscreen Mode: OFF</div> 
-<div class="maplink" id="backButton" style="border-color:#FFFFFF; background-color:#000000"><a href="http://www.nexusclash.com/modules.php?name=Game">Back to game</a></div> 
+<div class="maplink" id="badgeButton" style="border-color:#FFFFFF; background-color:#000000" onclick="toggleBadges()"> Badges: OFF </div>
+<div class="maplink" id="guildsButton" style="border-color:#FFFFFF; background-color:#000000" onclick="toggleGuilds()"> Guilds: OFF </div>
+<div class="maplink" id="markerModeButton" style="border-color:#FFFFFF; background-color:#000000" onclick="toggleMarkerMode()"> Set/Remove Markers: OFF</div>
+<div class="maplink" id="mobileModeButton" style="border-color:#FFFFFF; background-color:#000000" onclick="toggleTouchscreenMode()"> Touchscreen Mode: OFF</div>
+<div class="maplink" id="backButton" style="border-color:#FFFFFF; background-color:#000000"><a href="http://www.nexusclash.com/modules.php?name=Game">Back to game</a></div>
 
 <div class="toptitle"></div></div><!-- Please report bugs<br><b><font color="FFFF00"><u>B</u></font> toggles badges. <font color="FFFF00"><u>M</u></font> on location toggles marker. <font color="FFFF00"><u>Shift+click</u></font> cycles portal destinations. <font color="FFFF00"><u>Click</u></font> enters portals.</b></div></div> -->
 
