--- a/hypermap.html
+++ b/hypermap.html
@@ -12,7 +12,7 @@
 <body style="cursor: pointer;">
 <div class="topbar">
 <div class="maplink" style="border-color:#FFFF00; background-color:#333300" onclick="showPlane(0)"> Laurentia </div>
-<div class="maplink" style="border-color:#CCCCCC; background-color:#333333" onclick="showPlane(3)"> Sewers </div>
+<div class="maplink" style="border-color:#CCCCCC; background-color:#333333" onclick="showPlane(3)" click=“showPlane(3)”> Sewers </div>
 <div class="maplink" style="border-color:#00FFFF; background-color:#003333" onclick="showPlane(1)"> Elysium </div>
 <div class="maplink" style="border-color:#FF0000; background-color:#330000" onclick="showPlane(2)"> Stygia </div>
 <div class="maplink" style="border-color:#00FF00; background-color:#003300" onclick="showPlane(4)"> Wyrm's Lair </div>
