--- a/profileLookup.html
+++ b/profileLookup.html
@@ -3,7 +3,14 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>Nexus Clash profile lookup</title>
 </head>
+<link rel="STYLESHEET" type="text/css" href="profileStyle.css" />
 <body>
-  STUFF GOES HERE?
+  <div class="staticBar">
+    <h1>Enter character name to lookup</h1>
+    <form>
+      <label>Character Name: </label>
+      <input type="text" name="charName" maxlength="128" value="">
+      <input type="submit" name="submitBtn" value="Lookup">
+    </form>
 </body>
 </html>
