--- a/profileLookup.html
+++ b/profileLookup.html
@@ -15,5 +15,6 @@
   </div>
 </body>
 <script type="text/javascript"></script>
-<script language="JavaScript1.2" src="profileScript.js"></script>
+<script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.7.1.min.js"></script>
+<script src="profileScript.js"></script>
 </html>
