--- a/profileLookup.html
+++ b/profileLookup.html
@@ -15,6 +15,7 @@
   </div>
 </body>
 <script type="text/javascript"></script>
-<script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-1.7.1.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.js"></script>
+<script type="text/javascript" src="https://www.ajax-cross-origin.com/js/jquery.ajax-cross-origin.min.js"></script>
 <script src="profileScript.js"></script>
 </html>
