Added no char exists picture

--- a/profileTestDisplay.html
+++ b/profileTestDisplay.html
@@ -17,6 +17,9 @@
     <div id="nameLabel">Character Name:</div>
     <div id="charName">plscks</div>
   </div>
+  <div class="pictar">
+    <img src="https://github.com/plscks/python/raw/master/nochar.png">
+  </div>
 </body>
 <script type="text/javascript"></script>
 <script src="profileScript2.js"></script>
