Quite the interesting palette choices

--- a/profileTestDisplay.html
+++ b/profileTestDisplay.html
@@ -27,7 +27,7 @@
         <div class="left" id="classLabel">Class:</div>
         <div class="right" id="charClass">Mortal</div>
       </div>
-      <div id="aliveStatus">This character is alive</div>
+      <div id="aliveStatus" style="color: #00C040">This character is alive</div>
       <div class="factionFields">
         <div id="charPosition">Leader in</div>
         <div id="charFaction">Ridleybank Resistance Front</div>
