Needs css updated for badge section

--- a/profileTestDisplay.html
+++ b/profileTestDisplay.html
@@ -41,7 +41,18 @@
     <div id="personalLabel">Personal Description:</div>
     <div id="personalDescription">I'm here, I do stuff?! Pants?! What pants!?<p><p>Ex-Cosmonaut.</div>
   </div>
-
+  <div class="charBadges">
+    <div class="charStats">
+      <h1 id="statTitle">Statistics</h1>
+      <div class="badgeLeft" id="alcLabel">Alcohol Consumed:</div>
+      <div class="badgeRight" id="charAlc">130</div>
+      <div class="badgeLeft" id="angelLable">Angels Killed:</div>
+      <div class="badgeRight" id="charAngel">1</div>
+    </div>
+    <div class="charExpBadges">
+      a big list of stuff goes here.
+    </div>
+  </div>
 </body>
 <script type="text/javascript"></script>
 <script src="profileScript2.js"></script>
