Trying to get badge info sorted

--- a/profileTestDisplay.html
+++ b/profileTestDisplay.html
@@ -42,15 +42,24 @@
     <div id="personalDescription">I'm here, I do stuff?! Pants?! What pants!?<p><p>Ex-Cosmonaut.</div>
   </div>
   <div class="charBadges">
-    <div class="charStats">
-      <h1 id="statTitle">Statistics</h1>
-      <div class="badgeLeft" id="alcLabel">Alcohol Consumed:</div>
-      <div class="badgeRight" id="charAlc">130</div>
-      <div class="badgeLeft" id="angelLable">Angels Killed:</div>
-      <div class="badgeRight" id="charAngel">1</div>
-    </div>
+    <table class="charStats">
+      <tr>
+        <th id="statTitle">Statistics</th>
+      </tr>
+      <tr>
+        <td class="badgeLeft" id="alcLabel">Alcohol Consumed:</td>
+        <td class="badgeRight" id="charAlc">130</td>
+      </tr>
+      <tr>
+        <td class="badgeLeft" id="angelLable">Angels Killed:</td>
+        <td class="badgeRight" id="charAngel">1</td>
+      </tr>
+    </table>
     <div class="charExpBadges">
+      Exploration Badges!
+      <p>
       a big list of stuff goes here.
+      </p>
     </div>
   </div>
 </body>
