Updated colors palette

--- a/profileTestDisplay.html
+++ b/profileTestDisplay.html
@@ -25,9 +25,10 @@
       </div>
       <div class="classFields">
         <div class="left" id="classLabel">Class:</div>
-        <div class="right" id="charClass">Mortal</div>
+        <div class="right" id="charClass">Myrmidon</div>
       </div>
-      <div id="aliveStatus" style="color: #00C040">This character is alive</div>
+      <!--<div id="aliveStatus" style="color: #28e713;">This character is alive</div>-->
+      <div id="aliveStatus" style="color: #FD1D53;">This character is a formless spirit, floating above the planes, dead.</div>
       <div class="factionFields">
         <div id="charPosition">Leader in</div>
         <div id="charFaction">Ridleybank Resistance Front</div>
@@ -48,17 +49,89 @@
       </tr>
       <tr>
         <td class="badgeLeft" id="alcLabel">Alcohol Consumed:</td>
-        <td class="badgeRight" id="charAlc">130</td>
+        <td class="badgeRight" id="charAlc">100-499</td>
       </tr>
       <tr>
-        <td class="badgeLeft" id="angelLable">Angels Killed:</td>
-        <td class="badgeRight" id="charAngel">1</td>
+        <td class="badgeLeft" id="angelLabel">Angels Killed:</td>
+        <td class="badgeRight" id="charAngel">< 10</td>
+      </tr>
+      <tr>
+        <td class="badgeLeft" id="booksLabel">Books Read:</td>
+        <td class="badgeRight" id="charBooks">500-999</td>
+      </tr>
+      <tr>
+        <td class="badgeLeft" id="damDealLabel">Damage Dealt:</td>
+        <td class="badgeRight" id="charDamDeal">10000-49999</td>
+      </tr>
+      <tr>
+        <td class="badgeLeft" id="damTakeLabel">Damage Taken:</td>
+        <td class="badgeRight" id="charDamTake">10000-49999</td>
+      </tr>
+      <tr>
+        <td class="badgeLeft" id="deathsLabel">Deaths:</td>
+        <td class="badgeRight" id="charDeaths">100-499</td>
+      </tr>
+      <tr>
+        <td class="badgeLeft" id="demonsLabel">Demons Killed:</td>
+        <td class="badgeRight" id="charDemons">50-99</td>
+      </tr>
+      <tr>
+        <td class="badgeLeft" id="doorsDestLabel">Doors Destroyed:</td>
+        <td class="badgeRight" id="charDoorsDest">50-99</td>
+      </tr>
+      <tr>
+        <td class="badgeLeft" id="doorsRepLabel">Doors Repaired:</td>
+        <td class="badgeRight" id="charDoorsRep">< 10</td>
+      </tr>
+      <tr>
+        <td class="badgeLeft" id="foodLabel">Food Eaten:</td>
+        <td class="badgeRight" id="charFood">10-49</td>
+      </tr>
+      <tr>
+        <td class="badgeLeft" id="hpLabel">HP Healed:</td>
+        <td class="badgeRight" id="charHp">≥ 20000</td>
+      </tr>
+      <tr>
+        <td class="badgeLeft" id="itCraftLabel">Items Crafted:</td>
+        <td class="badgeRight" id="charItCraft">50-99</td>
+      </tr>
+      <tr>
+        <td class="badgeLeft" id="itRepLabel">Items Repaired:</td>
+        <td class="badgeRight" id="charItRep">< 10</td>
+      </tr>
+      <tr>
+        <td class="badgeLeft" id="killsLabel">Kills:</td>
+        <td class="badgeRight" id="charKills">100-499</td>
+      </tr>
+      <tr>
+        <td class="badgeLeft" id="locksLabel">Locks Picked:</td>
+        <td class="badgeRight" id="charLocks">10-49</td>
+      </tr>
+      <tr>
+        <td class="badgeLeft" id="petsLabel">Pets Killed:</td>
+        <td class="badgeRight" id="charPets">100-499</td>
+      </tr>
+      <tr>
+        <td class="badgeLeft" id="pillsLabel">Pills Taken:</td>
+        <td class="badgeRight" id="charPills">500-999</td>
+      </tr>
+      <tr>
+        <td class="badgeLeft" id="powerRemLabel">Power Removed:</td>
+        <td class="badgeRight" id="charPowerRem">10-49</td>
+      </tr>
+      <tr>
+        <td class="badgeLeft" id="powerRestLabel">Power Restored:</td>
+        <td class="badgeRight" id="charPowerRest">10-49</td>
+      </tr>
+      <tr>
+        <td class="badgeLeft" id="targetsLabel">Targets Shot:</td>
+        <td class="badgeRight" id="charTargets">10-49</td>
       </tr>
     </table>
     <div class="charExpBadges">
       Exploration Badges!
       <p>
-      a big list of stuff goes here.
+      No exploration badges obtained yet!
       </p>
     </div>
   </div>
