Coming close to useful

--- a/profileTestDisplay.html
+++ b/profileTestDisplay.html
@@ -27,8 +27,8 @@
         <div class="left" id="classLabel">Class:</div>
         <div class="right" id="charClass">Myrmidon</div>
       </div>
-      <!--<div id="aliveStatus" style="color: #28e713;">This character is alive</div>-->
-      <div id="aliveStatus" style="color: #FD1D53;">This character is a formless spirit, floating above the planes, dead.</div>
+      <!--<div id="aliveStatus"><span style="color: #28e713;">This character is alive</span></div>-->
+      <div id="aliveStatus"><span style="color: #FD1D53;">This character is a formless spirit, floating above the planes, dead.</span></div>
       <div class="factionFields">
         <div id="charPosition">Leader in</div>
         <div id="charFaction">Ridleybank Resistance Front</div>
@@ -40,7 +40,7 @@
     <div id="physLabel">Physical Description:</div>
     <div id="physDescription">A very tall man with elongated limbs and crude, almost feral, mannerisms. His body has many scars and wounds that expose gleaming bone and knotted muscle, but he seems unperturbed and focuses attentively on his surroundings.  He is wearing a Sun Scorched & Faded Astronaut Boots, an Astronaut Boots,  a Black Eye,  a Weathered & Faded Brown Wool Scarf, a Brown Wool Scarf,  a Chainmail Shirt,  a Shiny Thing,  a Black Kitten-Eared Hoodie, a Silver Ring,  and a Werewolf Mask. He radiates a deep, calming aura of peace.</div>
     <div id="personalLabel">Personal Description:</div>
-    <div id="personalDescription">I'm here, I do stuff?! Pants?! What pants!?<p><p>Ex-Cosmonaut.</div>
+    <div id="personalDescription">I'm here, I do stuff?! Pants?! What pants!?\r\n\r\nEx-Cosmonaut.</div>
   </div>
   <div class="charBadges">
     <table class="charStats">
