Adds production version

--- a/profileLookup2.html
+++ b/profileLookup2.html
@@ -127,11 +127,7 @@
         <td class="badgeRight" id="charTargets">-</td>
       </tr>
     </table>
-    <div class="charExpBadges">
-      Exploration Badges!
-      <p>
-      No exploration badges obtained yet!
-      </p>
+    <div class="charExpBadges" id="exploreBadges">
     </div>
   </div>
 </body>
