Resets fields every submission

--- a/profileLookup2.html
+++ b/profileLookup2.html
@@ -4,7 +4,7 @@
   <title>Nexus Clash profile lookup</title>
 </head>
 <link rel="STYLESHEET" type="text/css" href="profileStyle.css" />
-<body>
+<body id="bodyThing">
   <div class="staticBar">
     <h1 id="bar1">Enter character name to lookup</h1>
     <div class="inputs" id="bar2">
