Maybe android friendly?

--- a/hypermap_v2.html
+++ b/hypermap_v2.html
@@ -59,7 +59,7 @@
       </div>
       <div class="sidebar">
         <span id="infoText">
-        <br>Updated and maintained by plscks (2019).<br>Please report bugs <a href=https://github.com/plscks/testHYPERMAP/issues>HERE</a>.<br><br>Updated from the <a href=https://www.nexusclash.com/hypermap/>official hypermap</a> by Thalanor a.k.a. Esrahil. <br>This is very much so a work in progress, many thanks to <br>Azure, catvom, and the community for the updated google sheets maps.<br><br>Set at least two markers to calculate a shortest route between them,<br>OR set at least one marker to find the closest building of a type.
+        <br>Updated and maintained by plscks (2019).<br>Please report bugs <a href=https://github.com/plscks/testHYPERMAP/issues>HERE</a>.<br><br>Updated from the <a href=https://www.nexusclash.com/hypermap/>official hypermap</a> by Thalanor a.k.a. Esrahil. This is very much so a work in progress, many thanks to Azure, catvom, and the community for the updated google sheets maps.<br><br>Set at least two markers to calculate a shortest route between them, OR set at least one marker to find the closest building of a type.
         <div id="portalInstructions">Click to enter portals, Shift-click to cycle through destinations.</div>
         </span>
         <div id="sidebarMarkerlist">&nbsp;</div>
