--- a/hypermap_v2.html
+++ b/hypermap_v2.html
@@ -26,7 +26,7 @@
       <div class="maplink" id="backButton" style="border-color:#FFFFFF; background-color:#000000"><a href="http://www.nexusclash.com/modules.php?name=Game">Back to game</a></div>
     </div>
     <span class="bottomBar">
-      <div class="content" id="content">
+      <div class="content" id="content" onclick="">
         <div class="defaultPlane" id="valhalla"><img src="valhalla.png" height="1008" width="1008" /></div>
         <div class="planes" id="elysium"><img src="elysium.png" height="1008" width="768" /></div>
         <div class="planes" id="stygia"><img src="stygia.png" height="1008" width="768" /></div>
