--- a/hypermap_v2.html
+++ b/hypermap_v2.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <!-- Nexus Clash Breath 4 Hypermap -->
 <!-- html rewite by plscks to be mobile friendly, iOS and Android -->
 <!-- Let's see if we can get this thing to make any sort of sense -->
