--- a/hypermap_v2.html
+++ b/hypermap_v2.html
@@ -7,7 +7,7 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=0.5">
   <title>Nexus Clash Breath 4 Hypermap</title>
-  <link rel="STYLESHEET" type="text/css" href="style_v2.css" />
+  <link rel="STYLESHEET" type="text/css" href="style_v2.css">
 </head>
 <body>
   <div class="page">
