--- a/profileLookup_v2.html
+++ b/profileLookup_v2.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <!--
 Nexus Clash profile Lookup tool v0.3 written by plscks
 This tool takes advantage of the existing Nexus Clash Profile API *thanks Rincewind*
@@ -6,10 +7,10 @@ and I really should refactor the Javascript, in time perhaps! Anyways, enjoy!
 -->
 <html>
 <head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>Nexus Clash profile lookup</title>
+  <link rel="STYLESHEET" type="text/css" href="profileLookup.css">
 </head>
-<link rel="STYLESHEET" type="text/css" href="profileLookup.css" />
 <body>
   <div class="staticBar">
     <h1 id="bar1">Enter character name to lookup</h1>
