Oh no I hope this doesn't break things

--- a/chargen_b4_v2_2.html
+++ b/chargen_b4_v2_2.html
@@ -3,7 +3,7 @@
 
 <!-- Version 2.2 -->
 <!-- Originally created for Nexus War by Siddhant "wcil" M.; modified for Nexus Clash by Sihoiba; modified again slightly by plscks -->
-<title>Nexus Clash Breath 4 Character Generator</title>
+<title>Nexus Clash Breath 4 Character Planner</title>
 <style>
 body
 {
