--- a/hypermap.html
+++ b/hypermap.html
@@ -56,7 +56,7 @@
         <div id="overlay">&nbsp;</div>
         <div id="overlay2">&nbsp;</div>
         <div id="overlay3">&nbsp;</div>
-        <div id="tooltip"></div>
+        <div id="tooltip" aria-live="assertive"></div>
       </div>
       <div class="sidebar">
         <span id="infoText">
