Maybe updates cp banked number with aria-live

--- a/chargen_b4_v2_4.html
+++ b/chargen_b4_v2_4.html
@@ -2491,6 +2491,7 @@ function updateCPTable()
 {
 	var T2CPRemaining = (70 - T2_70CP) > 0 ? (70 - T2_70CP) : 0;
 	var T3CPRemaining = (250 - T3_250CP) > 0 ? (250 - T3_250CP) : 0;
+	document.getElementById("bankedcptitle").innerHTML = "CP banked:";
 	document.getElementById("bankedcp").innerHTML = banked;
 	document.getElementById("spentcp").innerHTML = CPSpent;
 	document.getElementById("tier2reqcp").innerHTML = T2CPRemaining;
@@ -2664,9 +2665,10 @@ function levelup()
 		}
 	}
 	banked = document.getElementById("bankedcp").innerHTML - 0 + cplevel[level.length];
+	document.getElementById("bankedcptitle").innerHTML = "CP banked:";
 	document.getElementById("bankedcp").innerHTML = banked;
 	level.push(levelskill.length);
-	document.getElementById("currentlevel").innerHTML = '<b>Current Level</b> ' + level.length;
+	document.getElementById("currentlevel").innerHTML = '<b>Current Level</b> : ' + level.length;
 	if (level.length >= 30)
 	{
 		document.getElementById("level").disabled = true;
@@ -4047,7 +4049,7 @@ function delevel()
 		temp = 10;
 	}
 	banked = temp;
-	document.getElementById("currentlevel").innerHTML = '<b>Current Level</b> ' + level.length;
+	document.getElementById("currentlevel").innerHTML = '<b>Current Level</b> : ' + level.length;
 	updateCPTable();
 	updateStatsTable();
 	if (level.length < oldlevel) {
@@ -4093,6 +4095,7 @@ function exploreBadge()
 		addLine(-1 * document.getElementById("exp02").value, document.getElementById("exp02").value + " Exploration Badges");
 		document.getElementById("exp00").value = document.getElementById("exp00").value - document.getElementById("exp02").value;
 		banked = 1 * document.getElementById("bankedcp").innerHTML + 1 * document.getElementById("exp02").value;
+		document.getElementById("bankedcptitle").innerHTML = "CP banked:";
 		document.getElementById("bankedcp").innerHTML = banked;
 
 	}
@@ -4124,6 +4127,7 @@ function achieveBadge(CP, lifetime)
 				levels.push(document.getElementById("lifetime_ach_bad1").value);
 				levelcp.push(-CP);
 				banked = 1 * document.getElementById("bankedcp").innerHTML + CP;
+				document.getElementById("bankedcptitle").innerHTML = "CP banked:";
 				document.getElementById("bankedcp").innerHTML = banked;
 				addLine(-CP, document.getElementById("lifetime_ach_bad1").value + " Accomplished");
 				badge = document.getElementById("lifetime_ach_bad1").value;
@@ -4142,6 +4146,7 @@ function achieveBadge(CP, lifetime)
 				levels.push(document.getElementById("breath_ach_bad1").value);
 				levelcp.push(-CP);
 				banked = 1 * document.getElementById("bankedcp").innerHTML + CP;
+				document.getElementById("bankedcptitle").innerHTML = "CP banked:";
 				document.getElementById("bankedcp").innerHTML = banked;
 				addLine(-CP, document.getElementById("breath_ach_bad1").value + " Accomplished");
 
@@ -4164,6 +4169,7 @@ function achieveBadge(CP, lifetime)
 				levels.push(document.getElementById("lifetime_ach_bad2").value);
 				levelcp.push(-CP);
 				banked = 1 * document.getElementById("bankedcp").innerHTML + CP;
+				document.getElementById("bankedcptitle").innerHTML = "CP banked:";
 				document.getElementById("bankedcp").innerHTML = banked;
 				addLine(-CP, document.getElementById("lifetime_ach_bad2").value + " Accomplished");
 				document.getElementById("lifetime_ach_bad2").removeChild(document.getElementById("lifetime_ach_bad2").options[document.getElementById("lifetime_ach_bad2").selectedIndex]);
@@ -4177,6 +4183,7 @@ function achieveBadge(CP, lifetime)
 				levels.push(document.getElementById("breath_ach_bad2").value);
 				levelcp.push(-CP);
 				banked = 1 * document.getElementById("bankedcp").innerHTML + CP;
+				document.getElementById("bankedcptitle").innerHTML = "CP banked:";
 				document.getElementById("bankedcp").innerHTML = banked;
 				addLine(-CP, document.getElementById("breath_ach_bad2").value + " Accomplished");
 				document.getElementById("breath_ach_bad2").removeChild(document.getElementById("breath_ach_bad2").options[document.getElementById("breath_ach_bad2").selectedIndex]);
@@ -5334,11 +5341,11 @@ function addLine(CP, text)
 </div>
 </div>
 <div id="build">
-<div id="level_plan" aria-live="assertive"> : <span id="currentlevel"><b>Current Level</b> 1 </span>
+<div id="level_plan" aria-live="assertive"><span id="currentlevel"><b>Current Level</b> : 1 </span>
  <br>
 <table class="tableCP">
 	<tbody>
-		<tr><td class="tdstats">CP banked:</td><td id="bankedcp">10</td></tr>
+		<tr><td class="tdstats" id="bankedcptitle">CP banked:</td><td id="bankedcp">10 CP banked</td></tr>
 		<tr><td class="tdstats">CP spent:</td><td id="spentcp">0</td></tr>
 		<tr><td class="tdstats">CP spend required before Tier 2:</td><td id="tier2reqcp">70</td></tr>
 		<tr><td class="tdstats">CP spend required before Tier 3:</td><td id="tier3reqcp">250</td></tr>
