--- a/chargen_b4_v2_4.html
+++ b/chargen_b4_v2_4.html
@@ -5345,7 +5345,7 @@ function addLine(CP, text)
  <br>
 <table class="tableCP">
 	<tbody>
-		<tr><td class="tdstats" id="bankedcptitle">CP banked:</td><td id="bankedcp">10 CP banked</td></tr>
+		<tr><td class="tdstats" id="bankedcptitle">CP banked:</td><td id="bankedcp">10</td></tr>
 		<tr><td class="tdstats">CP spent:</td><td id="spentcp">0</td></tr>
 		<tr><td class="tdstats">CP spend required before Tier 2:</td><td id="tier2reqcp">70</td></tr>
 		<tr><td class="tdstats">CP spend required before Tier 3:</td><td id="tier3reqcp">250</td></tr>
